package auth_service.entity;

public enum Role {
    ADMIN,
    INVENTORY_MANAGER,
    ORDER_PROCESSING,
    WAREHOUSE_SPECIALIST,
    SHIPMENT_LEAD,
    CLOUD_ARCHITECT
}