@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0
hide empty members

title SCM Platform - Class Diagram (Auth Domain)

package "auth-service" {
  class User {
    +id: Long
    +email: String
    +passwordHash: String
    +status: UserStatus
    +isMfaEnabled: Boolean
  }

  class Role {
    +id: Long
    +name: String
  }

  class RefreshToken {
    +id: Long
    +userId: Long
    +token: String
    +expiresAt: Instant
    +revoked: Boolean
  }

  class OtpChallenge {
    +id: Long
    +userId: Long
    +otpRef: String
    +codeHash: String
    +expiresAt: Instant
    +validated: Boolean
  }

  enum UserStatus {
    ACTIVE
    LOCKED
    DISABLED
  }

  class AuthService {
    +login(email: String, password: String): LoginResult
    +verifyOtp(otpRef: String, code: String): TokenPair
    +refresh(refreshToken: String): TokenPair
  }
}

User --> UserStatus
User "*" -- "*" Role
User "1" -- "0..*" RefreshToken
User "1" -- "0..*" OtpChallenge
AuthService --> User
AuthService --> RefreshToken
AuthService --> OtpChallenge

@enduml

